# tabletop

./: .gitignore  LICENSE  Makefile  README.md  demo.tape  pyproject.toml
tabletop/: __main__.py  cli.py  output.py  parser.py  transforms.py
tests/: conftest.py  test_cli.py  test_fixtures.py  test_output.py  test_parser.py  test_transforms.py
tests/fixtures/: df_h.txt  hermes_skills_list.txt  hf_cache_list.txt  ls_la.txt  lsof.txt  lsof_net.txt  ollama_list.txt  podman_images.txt  podman_ps_all.txt  podman_volume_ls.txt  ps.txt  ps_aux.txt  ps_ef.txt
