[project]
name = "tabletop"
version = "0.1.0"
description = "Reformat, sort, filter, and reshape space-aligned CLI table output"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
]

[project.scripts]
tabletop = "tabletop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tabletop"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
